--- a/assets/main.scss
+++ b/assets/main.scss
@@ -3,3 +3,15 @@
 ---
 
 @import "minima";
+
+.images {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.image {
+    width: 40%;
+    padding: 10px;
+    margin-bottom: 1em;
+}
