--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,7 +13,7 @@ layout: default
 
   <div class="images">
     {%- for img in page.images -%}
-      <img src="{{- img | relative_rl -}}" alt="" class="image">
+      <img src="https://res.cloudinary.com/chralatz/image/upload/q_auto/uploads/{{- img -}}" alt="" class="image">
     {%- endfor -%}
   </div>
     
